.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:49:51 **** Incremental Build of configuration Debug for project 0416_serial_communication ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L432xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "0416_serial_communication.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ASUS\Desktop\stm_ws\0416_serial_communication\STM32L432KCUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="0416_serial_communication.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 0416_serial_communication.elf
 
arm-none-eabi-size  0416_serial_communication.elf 
arm-none-eabi-objdump -h -S 0416_serial_communication.elf  > "0416_serial_communication.list"
   text	   data	    bss	    dec	    hex	filename
  16060	     12	   1916	  17988	   4644	0416_serial_communication.elf
Finished building: default.size.stdout
 
Finished building: 0416_serial_communication.list
 
21:50:14 **** Incremental Build of configuration Debug for project 0416_serial_communication ****
make -j16 all 
arm-none-eabi-size  0416_serial_communication.elf 
   text	   data	    bss	    dec	    hex	filename
  16060	     12	   1916	  17988	   4644	0416_serial_communication.elf
Finished building: default.size.stdout
 
21:50:59 **** Incremental Build of configuration Debug for project 0416_serial_communication ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L432xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "0416_serial_communication.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ASUS\Desktop\stm_ws\0416_serial_communication\STM32L432KCUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="0416_serial_communication.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 0416_serial_communication.elf
 
arm-none-eabi-size  0416_serial_communication.elf 
arm-none-eabi-objdump -h -S 0416_serial_communication.elf  > "0416_serial_communication.list"
   text	   data	    bss	    dec	    hex	filename
  16060	     12	   1916	  17988	   4644	0416_serial_communication.elf
Finished building: default.size.stdout
 
Finished building: 0416_serial_communication.list
 
21:51:26 **** Incremental Build of configuration Debug for project 0416_serial_communication ****
make -j16 all 
arm-none-eabi-size  0416_serial_communication.elf 
   text	   data	    bss	    dec	    hex	filename
  16060	     12	   1916	  17988	   4644	0416_serial_communication.elf
Finished building: default.size.stdout
 
22:08:46 **** Incremental Build of configuration Debug for project 0416_serial_communication ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L432xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:316:19: error: too many arguments to function 'HAL_GPIO_TogglePin'
  316 |                   HAL_GPIO_TogglePin(A4_blue_GPIO_Port, A4_blue_Pin, SET);
      |                   ^~~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32l4xx_hal_conf.h:262,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio.h:297:19: note: declared here
  297 | void              HAL_GPIO_TogglePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin);
      |                   ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
22:09:14 **** Incremental Build of configuration Debug for project 0416_serial_communication ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L432xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "0416_serial_communication.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ASUS\Desktop\stm_ws\0416_serial_communication\STM32L432KCUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="0416_serial_communication.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 0416_serial_communication.elf
 
arm-none-eabi-size  0416_serial_communication.elf 
arm-none-eabi-objdump -h -S 0416_serial_communication.elf  > "0416_serial_communication.list"
   text	   data	    bss	    dec	    hex	filename
  16108	     12	   1916	  18036	   4674	0416_serial_communication.elf
Finished building: default.size.stdout
 
Finished building: 0416_serial_communication.list
 
